--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,10 @@
    <title>React App</title>
 </head>
 <body>
-<div id="root"></div>
-<script type="text/javascript" src="main.js"></script></body>
+   <div id="root"></div>
+   <noscript>
+      You need to enable JavaScript to run this app.
+   </noscript>
+   <!-- <script type="text/javascript" src="bundle.js"></script> -->
+</body>
 </html>
